# bevy_xilem

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DESIGN.md  README.md  STYLING.md
assets/locales/en-US/: main.ftl  main.ftl.yml
assets/locales/ja-JP/: main.ftl  main.ftl.yml
assets/locales/zh-CN/: main.ftl  main.ftl.yml
assets/themes/: async_downloader.ron  calculator.ron  chess_game.ron  default_theme.ron  game_2048.ron  overlay_hit_routing.ron  pixiv_client.ron  timer.ron  todo_list.ron  ui_showcase.ron
crates/bevy_tweening/: Cargo.toml
crates/bevy_tweening/src/: lib.rs
crates/bevy_xilem/: Cargo.toml
crates/bevy_xilem-activation/: Cargo.toml
crates/bevy_xilem-activation/src/: lib.rs
crates/bevy_xilem-icons/: Cargo.toml
crates/bevy_xilem-icons/src/: lib.rs
crates/bevy_xilem/src/: app_ext.rs  ecs.rs  events.rs  fonts.rs  i18n.rs  icons.rs  lib.rs  logging.rs  overlay.rs  plugin.rs  projection.rs  runner.rs  runtime.rs  styling.rs  synthesize.rs  templates.rs  tests.rs  widget_actions.rs
crates/bevy_xilem/src/components/: combo_box.rs  mod.rs  tab_bar.rs  toast.rs
crates/bevy_xilem/src/controls/: button.rs  checkbox.rs  color_picker.rs  combo_box.rs  date_picker.rs  dialog.rs  group_box.rs  menu.rs  mod.rs  radio_group.rs  slider.rs  spinner.rs  split_pane.rs  switch.rs  tab_bar.rs  table.rs  text_input.rs  toast.rs  tooltip.rs  tree_node.rs
crates/bevy_xilem/src/projection/: core.rs  dialog.rs  dropdown.rs  elements.rs  layout.rs  overlay.rs  utils.rs  widgets.rs
crates/bevy_xilem/src/theme/: fluent_dark.ron  fluent_light.ron  fluent_theme.ron
crates/bevy_xilem/src/views/: ecs_button_view.rs  ecs_button_with_child_view.rs  ecs_component_views.rs  entity_scope_view.rs  mod.rs  opaque_hitbox_view.rs  scroll_portal_view.rs
crates/bevy_xilem/src/widgets/: ecs_button_widget.rs  ecs_button_with_child_widget.rs  entity_scope_widget.rs  mod.rs  opaque_hitbox_widget.rs
examples/: calculator.rs  chess.rs  cjk_text_example.rs  download_with_progress.rs  game_2048.rs  i18n_showcase.rs  overlay_hit_routing.rs  temperature_converter.rs  theme_gallery.rs  timer.rs  todo_list.rs  widget_showcase.rs
examples/async_downloader/: Cargo.toml
examples/async_downloader/src/: main.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/chess/: Cargo.toml
examples/chess_engine/: Cargo.toml
examples/chess_game/: Cargo.toml
examples/chess_game/src/: engine.rs  main.rs
examples/cjk_text_example/: Cargo.toml
examples/download_with_progress/: Cargo.toml
examples/game_2048/: Cargo.toml
examples/game_2048/src/: main.rs
examples/i18n_showcase/: Cargo.toml
examples/overlay_hit_routing/: Cargo.toml
examples/overlay_hit_routing/src/: main.rs
examples/pixiv_client/: Cargo.toml  README.md
examples/pixiv_client/assets/themes/: pixiv_client.ron
examples/pixiv_client/src/: app.rs  lib.rs  main.rs
examples/pixiv_client/src/app/: actions.rs
examples/shared_utils/: Cargo.toml
examples/shared_utils/src/: lib.rs
examples/temperature_converter/: Cargo.toml
examples/theme_gallery/: Cargo.toml
examples/timer/: Cargo.toml
examples/timer/src/: main.rs
examples/todo_list/: Cargo.toml
examples/todo_list/src/: main.rs
examples/ui_showcase/: Cargo.toml
examples/ui_showcase/src/: main.rs
examples/utils/: mod.rs
examples/widget_showcase/: Cargo.toml
