[workspace]
resolver = "2"
members = ["crates/bevy_xilem", "examples/pixiv_client"]
exclude = ["third_party/xilem"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy_app = { version = "0.18", default-features = false, features = ["std"] }
bevy_asset = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false, features = ["std"] }
bevy_input = { version = "0.18", default-features = false, features = ["std", "mouse", "keyboard"] }
bevy_text = { version = "0.18", default-features = false }
bevy_tasks = { version = "0.18", default-features = false, features = ["multi_threaded"] }
bevy_time = { version = "0.18", default-features = false, features = ["std"] }
bevy_window = { version = "0.18", default-features = false, features = ["std"] }
bevy_tweening = { version = "0.15", default-features = false }
bevy_embedded_assets = "0.15.0"
crossbeam-queue = "0.3"
tokio = { version = "1.49", features = ["rt-multi-thread"] }
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.17"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
masonry = { path = "third_party/xilem/masonry" }
xilem = { path = "third_party/xilem/xilem" }
xilem_core = { path = "third_party/xilem/xilem_core" }
xilem_masonry = { path = "third_party/xilem/xilem_masonry" }
vello = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
