[package]
name = "bevy_xilem"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
crossbeam-channel.workspace = true
xilem.workspace = true
xilem_masonry.workspace = true

[dev-dependencies]
num-traits.workspace = true

[[example]]
name = "calculator"
path = "../../examples/calculator.rs"

[[example]]
name = "todo_list"
path = "../../examples/todo_list.rs"

[[example]]
name = "chess"
path = "../../examples/chess.rs"

[[example]]
name = "temperature_converter"
path = "../../examples/temperature_converter.rs"

[[example]]
name = "timer"
path = "../../examples/timer.rs"
