[package]
name = "bevy_xilem"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_input.workspace = true
bevy_window.workspace = true
crossbeam-queue.workspace = true
masonry.workspace = true
tokio.workspace = true
xilem.workspace = true
xilem_core.workspace = true
xilem_masonry.workspace = true
vello.workspace = true

[dev-dependencies]
num-traits.workspace = true

[[example]]
name = "calculator"
path = "../../examples/calculator.rs"

[[example]]
name = "todo_list"
path = "../../examples/todo_list.rs"

[[example]]
name = "chess"
path = "../../examples/chess.rs"

[[example]]
name = "temperature_converter"
path = "../../examples/temperature_converter.rs"

[[example]]
name = "timer"
path = "../../examples/timer.rs"
