[package]
name = "bevy_xilem"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_input.workspace = true
bevy_math.workspace = true
bevy_text.workspace = true
bevy_tasks.workspace = true
bevy_time.workspace = true
bevy_tweening.workspace = true
bevy_window.workspace = true
bevy_embedded_assets.workspace = true
crossbeam-queue.workspace = true
fluent.workspace = true
masonry.workspace = true
rfd.workspace = true
tokio.workspace = true
unic-langid.workspace = true
xilem.workspace = true
xilem_core.workspace = true
xilem_masonry.workspace = true
vello.workspace = true
tracing.workspace = true

[dev-dependencies]
num-traits.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "calculator"
path = "../../examples/calculator.rs"

[[example]]
name = "todo_list"
path = "../../examples/todo_list.rs"

[[example]]
name = "chess"
path = "../../examples/chess.rs"

[[example]]
name = "temperature_converter"
path = "../../examples/temperature_converter.rs"

[[example]]
name = "timer"
path = "../../examples/timer.rs"

[[example]]
name = "download_with_progress"
path = "../../examples/download_with_progress.rs"

[[example]]
name = "theme_gallery"
path = "../../examples/theme_gallery.rs"

[[example]]
name = "game_2048"
path = "../../examples/game_2048.rs"

[[example]]
name = "cjk_text_example"
path = "../../examples/cjk_text_example.rs"

[[example]]
name = "i18n_showcase"
path = "../../examples/i18n_showcase.rs"
