[package]
name = "example_async_downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
reqwest.workspace = true
tokio.workspace = true
shared_utils = { path = "../shared_utils" }
tracing-subscriber.workspace = true
