[package]
name = "example_cjk_text_example"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_cjk_text_example"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
tracing-subscriber.workspace = true
