[package]
name = "example_download_with_progress"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_download_with_progress"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
