[package]
name = "example_game_2048"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_game_2048"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
masonry.workspace = true
tracing-subscriber.workspace = true
