[package]
name = "example_game_2048"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
masonry.workspace = true
shared_utils = { path = "../shared_utils" }
tracing-subscriber.workspace = true
