[package]
name = "example_i18n_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_i18n_showcase"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
bevy_embedded_assets.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unic-langid.workspace = true
