[package]
name = "example_overlay_hit_routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_overlay_hit_routing"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
tracing-subscriber.workspace = true
