[package]
name = "example_timer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_timer"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
