[package]
name = "example_ui_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
bevy_embedded_assets.workspace = true
shared_utils = { path = "../shared_utils" }
tracing.workspace = true
tracing-subscriber.workspace = true
unic-langid.workspace = true
