[package]
name = "example_widget_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_widget_showcase"
path = "main.rs"

[dependencies]
bevy_xilem = { path = "../../crates/bevy_xilem" }
bevy_ecs.workspace = true
tracing-subscriber.workspace = true
